# dungeons-and-llamas

./: .gitignore  README.md  justfile  output.txt  schema.csv
.github/workflows/: deploy.yml
infra/modules/aws/: terragrunt.hcl
infra/modules/aws/api-gateway/: _data.tf  _inputs.tf  _outputs.tf  api.tf  discord_bot.tf  dnl_api.tf  http.tf  main.tf  terragrunt.hcl
infra/modules/aws/api-gateway/env-config/: common.tfvars
infra/modules/aws/cloudwatch/: _inputs.tf  main.tf  terragrunt.hcl
infra/modules/aws/cloudwatch/env-config/: common.tfvars
infra/modules/aws/dynamodb/: main.tf  terragrunt.hcl
infra/modules/aws/dynamodb/env-config/: common.tfvars
infra/modules/aws/iam/policies/: _inputs.tf  _locals.tf  attachments.tf  dynamodb_rw.tf  terragrunt.hcl
infra/modules/aws/iam/policies/env-config/: common.tfvars
infra/modules/aws/iam/roles/: _outputs.tf  roles.tf
infra/modules/aws/iam/roles/env-config/: common.tfvars
infra/modules/aws/lambda/: _data.tf  _inputs.tf  _locals.tf  _outputs.tf  _variables.tf  lambda.tf  terragrunt.hcl
infra/modules/aws/lambda/env-config/: common.tfvars
infra/modules/aws/route53/: _data.tf  _inputs.tf  main.tf  terragrunt.hcl
infra/modules/aws/route53/env-config/: common.tfvars
infra/modules/aws/s3/: _inputs.tf  _locals.tf  _outputs.tf  main.tf  notifications.tf  terragrunt.hcl
infra/modules/aws/s3/env-config/: common.tfvars
scripts/: create_bulk_commands.py  delete_all_commands.py  delete_command.py  edit_response.py  list_all_commands.py
src/: Cargo.toml
src/api/: Cargo.toml
src/api/src/: main.rs
src/bot/: Cargo.toml
src/bot/src/: commands.rs  components.rs  main.rs  modals.rs  roll.rs  verify.rs
src/command-manager/: Cargo.toml
src/command-manager/src/: main.rs
src/commandmanager/: Cargo.toml
src/commandmanager/src/: main.rs
src/data/: commands.json
src/dice/src/: lib.rs
src/game/: Cargo.toml
src/game/src/: lib.rs
src/game/src/aws/: dynamodb.rs
src/game/src/client/: mod.rs
src/game/src/state/: mod.rs
src/game/src/state/game/: mod.rs
src/game/src/state/game/enemy/: mod.rs
src/game/src/state/game/map/: color.rs  connection.rs  encounter.rs  linked.rs  mod.rs  path.rs
src/game/src/state/game/player/: mod.rs
src/game/src/state/game/player/actions/: mod.rs
src/game/src/state/game/player/actions/spells/: mod.rs
src/game/src/state/game/player/character/: mod.rs
src/game/src/state/game/player/inventory/: mod.rs
src/game/src/state/game/player/inventory/items/: armor.rs  books_and_scrolls.rs  clothing.rs  equipped.rs  magic.rs  mod.rs  tools.rs  weapons.rs
src/game/src/state/game/player/stats/: mod.rs
src/game/src/state/game/player/stats/abilities/: mod.rs
src/game/src/state/game/player/stats/conditions/: mod.rs
src/game/src/state/game/player/stats/core_attributes/: mod.rs
src/game/src/state/game/player/stats/saving_throws/: mod.rs
src/game/src/state/game/player/stats/skills/: mod.rs
src/game/src/state/message/: mod.rs
src/game/src/state/user/: mod.rs
src/hello/: Cargo.toml
src/hello/src/: main.rs
