[package]
name = "command-manager"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.89"
aws-config = { version = "1.5.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.54.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = [
    "s3",
] }
lambda_http = "0.13.0"

lambda_runtime = "0.13.0"
lazy_static = "1.5.0"
reqwest = { version = "0.12.8", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1", features = ["macros"] }
