[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
aws-config = "1.5.8"
aws-sdk-dynamodb = "1.49.0"
lambda_http = "0.13.0"
lazy_static = "1.5.0"
rand = "0.8.5"
serde = "1.0.210"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.128"
sqids = "0.4.1"
uuid = { version = "1.10.0", features = ["v4"] }
