[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.89"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
lambda_http = "0.13.0"
lazy_static = "1.5.0"
nacl = "0.5.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serenity = "0.12.2"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
